; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lmgr.c_LockRelationOid.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lmgr.c_LockRelationOid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCKACQUIRE_ALREADY_CLEAR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LockRelationOid(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @SetLocktagRelationOid(i32* %5, i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = call i64 @LockAcquireExtended(i32* %5, i32 %10, i32 0, i32 0, i32 1, i32** %6)
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* @LOCKACQUIRE_ALREADY_CLEAR, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = call i32 (...) @AcceptInvalidationMessages()
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @MarkLockClear(i32* %17)
  br label %19

19:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @SetLocktagRelationOid(i32*, i32) #1

declare dso_local i64 @LockAcquireExtended(i32*, i32, i32, i32, i32, i32**) #1

declare dso_local i32 @AcceptInvalidationMessages(...) #1

declare dso_local i32 @MarkLockClear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
